<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.indianewsfeed.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.indianewsfeed.ui.business.BusinessFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_entertainment"
        android:name="com.example.indianewsfeed.ui.entertainment.EntertainmentFragment"
        android:label="@string/entertainment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_general"
        android:name="com.example.indianewsfeed.ui.general.GeneralFragment"
        android:label="@string/general"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.indianewsfeed.ui.Health.HealthFragment"
        android:label="@string/health"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_science"
        android:name="com.example.indianewsfeed.ui.science.ScienceFragment"
        android:label="@string/science"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_sports"
        android:name="com.example.indianewsfeed.ui.sports.SportsFragment"
        android:label="@string/sports"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_technology"
        android:name="com.example.indianewsfeed.ui.technology.TechnologyFragment"
        android:label="@string/technology"
        tools:layout="@layout/fragment_home" />

</navigation>